--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
-    "liveServer.settings.port": "public1",
-    "liveServer.settings.port": "public",
-    "git.ignoreLimitWarning": true
+    "liveServer.settings.port": 5502,
+    "liveServer.settings.root": "public",
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#352D14",
+        "titleBar.activeBackground": "#4A3F1C",
+        "titleBar.activeForeground": "#FCFAF6"
+    }
 }
